Add defaultValue on TransformableField